# vulkan-thing

./: .gitignore  CMakeLists.txt  Globals.cpp  Globals.h  Logger.cpp  Logger.h  README.md  Utils.h  VulkanRenderer.cpp  VulkanRenderer.h  Window.cpp  Window.h  main.cpp
.cache/clangd/index/: Globals.cpp.42D37BBBDE47BC98.idx  Globals.h.52CF7CD4AF2FD948.idx  Logger.cpp.9A9F3AECB7D9526D.idx  Logger.h.1221FADF0C132C92.idx  Utils.h.17C1FF996E546910.idx  VulkanRenderer.cpp.50F0CCB01E8B14C0.idx  VulkanRenderer.h.3E669FB44C527A74.idx  Window.cpp.01404427242CBE33.idx  Window.h.773592B30B99147A.idx  main.cpp.8C28550B2CF1DEF8.idx
Engine/: Utils.cpp  Utils.h  Window.cpp  Window.h
Engine/Scripts/: linux-compile-shaders.sh
Engine/VulkanRenderer/: Device.cpp  Device.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Instance.cpp  Instance.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h
Engine/VulkanRenderer/Device/: Device.cpp  Device.h  DeviceUtils.h  PhysicalDevice.cpp  PhysicalDevice.h  QueueFamilyIndices.h  SwapchainSupportedProperties.h
engine/: defines.h  utils.cpp  window.cpp  window.h
engine/core/: clock.cpp  clock.h
engine/math/: Vector2.cpp  Vector2.h
engine/renderer/: renderer.cpp  renderer.h  renderer_interface.h  types.h
engine/renderer/vulkan/: frame.h  frame_sync.cpp  frame_sync.h  graphics_pipeline.cpp  graphics_pipeline.h  instance.cpp  instance.h  surface.cpp  surface.h  vk_renderer.cpp  vk_renderer.h
engine/renderer/vulkan/buffers/: CommandBufferRecorder.cpp  CommandBufferRecorder.h  command_buffer_recorder.cpp  command_buffer_recorder.h
engine/renderer/vulkan/device/: device.cpp  device.h  device_utils.h  physical_device.cpp  physical_device.h  queue_family_indices.h  swapchain_supported_properties.h
engine/renderer/vulkan/swapchain/: swapchain.cpp  swapchain.h
engine/renderer/vulkan/sync/: semaphores.h
engine/scripts/: windows-compile-shaders.bat
